# game-assistant

./: .gitignore  README  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  domain-models.md
scripts/: README.md
src/game_assistant/: __init__.py  __main__.py
src/game_assistant/adapters/: __init__.py
src/game_assistant/analysis/: __init__.py
src/game_assistant/cli/: __init__.py  main.py
src/game_assistant/coach/: __init__.py
src/game_assistant/core/: __init__.py  domain.py
src/game_assistant/recommendation/: __init__.py
src/game_assistant/replay/: __init__.py
src/game_assistant/reports/: __init__.py
src/game_assistant/storage/: __init__.py
src/game_assistant/vision/: __init__.py
tests/: test_domain_models.py  test_foundation.py
