[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "game-assistant"
version = "0.1.0"
description = "Local-first, coach-only rhythm-game training assistant under active development."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Game Assistant contributors" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
ci = [
  "coverage==7.15.0",
  "mypy==2.2.0",
  "PyYAML==6.0.3",
  "ruff==0.15.21",
]

[project.scripts]
game-assistant = "game_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["game_assistant*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.mypy]
python_version = "3.11"
files = ["src/game_assistant"]
strict = true

[tool.coverage.run]
branch = true
source = ["game_assistant"]

[tool.coverage.report]
fail_under = 70
show_missing = true
